Album Page Completed
Album page rendering image, titles and retrieving information from API

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BeeHive Project</title>
     <script src="js/appComponent.js"></script>
+    
     <!--BEES JS-->
     <script src="js/manager/beesManager.js"></script>
     <script src="js/components/beeComponents/beeComponent.js"></script>
@@ -21,7 +22,13 @@
     <script src="js/models/post.js"></script>
     <script src="js/models/beeComment.js"></script>
 
+    <!--ALBUM JS-->
     <script src="js/manager/albumManager.js"></script>
+    <script src="js/components/albumComponents/albumComponent.js"></script>
+    <script src="js/components/albumComponents/photoComponent.js"></script>
+    <script src="js/models/album.js"></script>
+    <script src="js/models/photo.js"></script>
+
     <script src="js/manager/todosManager.js"></script>
     <script src="js/basicFunctions.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -75,9 +82,9 @@
             </div>
 
             <!-- BEE'S ALBUM  -->
-            <div id="albumComponent" class="containers" style="display: none;">
+            <div id="albumsComponent" class="containers" style="display: none;">
                 <h2 class="titles">Bee's Album</h2>
-                <div id="photoComponent">
+                <div id="albumComponent">
                 </div>
             </div>
 
