NewPost Button Layout
Overlay page for newpost button, programmed to support newComment as it contains same information

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/manager/postManager.js"></script>
     <script src="js/components/postComponents/postComponent.js"></script>
     <script src="js/components/postComponents/postsComponent.js"></script>
+    <script src="js/components/postComponents/newPostComponent.js"></script>
     <script src="js/components/postComponents/commentComponent.js"></script>
     <script src="js/models/post.js"></script>
     <script src="js/models/beeComment.js"></script>
@@ -75,6 +76,7 @@
             </div>
 
             <!-- BEE'S POST -->
+            <div id="newPostComponent" class="newPostOverlay" style="display: none;"></div>
             <div id="postsComponent" class="containers" style="display: none;">
                 <h2 class="titles">Bee's Posts</h2>
                 <div id="postComponent">
